--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,5 +8,10 @@
 
 body {
     margin: 0 auto;
-    background-color:        #F6F5F4;
+    background-color: #F6F5F4;
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
